[package]
name = "poseidon"
version = "0.1.0"
description = "Poseidon hash function"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2024"
rust-version = "1.85"
documentation = "https://docs.rs/poseidon"
repository = "https://github.com/RustCrypto/hashes"
keywords = ["crypto", "hash", "poseidon", "digest", "zkp", "zero-knowledge"]
categories = ["cryptography", "no-std"]

[dependencies]
digest = "0.11.0-rc.0"

[dev-dependencies]
digest = { version = "0.11.0-rc.0", features = ["dev"] }
hex-literal = "1"
base16ct = { version = "0.2", features = ["alloc"] }

[features]
default = ["alloc"]
alloc = ["digest/alloc"]
zeroize = ["digest/zeroize"]

[package.metadata.docs.rs]
all-features = true 